--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -28,8 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.Login" />
-        <activity android:name=".views.Register" android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".views.user.Login" />
+        <activity
+            android:name=".views.user.Register"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".views.place.Add_Place"></activity>
     </application>
 
 </manifest>
