--- a/Frontend/Proyecto/build.gradle
+++ b/Frontend/Proyecto/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
     testCompile 'junit:junit:4.12'
 }
 
