--- a/Frontend/Proyecto/build.gradle
+++ b/Frontend/Proyecto/build.gradle
@@ -42,8 +42,10 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
+    compile 'com.android.support:preference-v14:26.+'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
